# enigmash

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  plan.md  run.sh
.github/workflows/: mdbook.yml
assets/data/: objects.json
assets/data/world/: enigmash.json  index.json  r1.json  r2.json  r3.json  r4.json  r5.json  r6.json  test.json
cmake/: icon.rc
docs/: book.toml
docs/src/: README.md  SUMMARY.md  scenes.md
docs/src/text/: cjk-support.md  font-wrapper.md
include/: game.h
include/editor/: panels.h
include/engine/: layer_stack.h  text.h
include/game/: components.h  input.h  objects_registry.h  sprite_cache.h  undo_ring.h
include/game/regions/: dispatch.h  r2_climb.h  r2_gravity.h  r5_slide.h
include/game/systems/: patch_wall_sprite.h  render_tiles.h  spatial.h  toggle_swap.h
include/layers/: game_layer.h  imgui_layer.h
include/scenes/: gallery_scene.h  gameplay_scene.h  main_menu_scene.h  pause_menu_scene.h  placeholder.h
refs/enigmash-original/: game.txt
src/: game.cpp  game.h  game_layer.cpp  game_layer.h  imgui_layer.cpp  imgui_layer.h  layer.h  layer_stack.cpp  layer_stack.h  theme.h
src/editor/: panels.cpp
src/engine/: layer_stack.cpp  scene.h  scene_manager.cpp  scene_manager.h  text.cpp  text.h
src/game/: audio.cpp  audio.h  components.h  direction.h  input.cpp  objects_registry.cpp  objects_registry.h  sprite_cache.cpp  undo_ring.cpp  world.cpp  world.h
src/game/regions/: dispatch.cpp  dispatch.h  r1_sokoban.cpp  r1_sokoban.h  r2_climb.cpp  r2_gravity.cpp  r2_gravity.h  r3_chain.cpp  r3_chain.h  r4_shoot.cpp  r4_shoot.h  r5_slide.cpp  r5_snake.cpp  r5_snake.h  r6_cluster.cpp  r6_cluster.h
src/game/systems/: patch_box_sprite.cpp  patch_box_sprite.h  patch_player_sprite.cpp  patch_player_sprite.h  patch_wall_sprite.cpp  patch_wall_sprite.h  render_interp.cpp  render_interp.h  render_tiles.cpp  spatial.cpp  toggle_swap.cpp
src/layers/: game_layer.cpp  imgui_layer.cpp
src/scenes/: achievements_scene.cpp  achievements_scene.h  credits_scene.cpp  credits_scene.h  editor_panels.cpp  editor_panels.h  end_scene.cpp  end_scene.h  gallery_scene.cpp  gameplay_scene.cpp  gameplay_scene.h  main_menu_scene.cpp  pause_menu_scene.cpp  placeholder.cpp  settings_scene.cpp  settings_scene.h
tools/: decode_levels.py  extract_sprites.py  gen_object_catalog.py
